--- a/app/corstutorial/www/index.html
+++ b/app/corstutorial/www/index.html
@@ -15,12 +15,16 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
+    <!-- other libraries -->
+    <script src="lib/angular-cookies/angular-cookies.min.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
   </head>
 
   <body ng-app="corstutorial">
